Correct rbac for patched CIS 2.4.1 cilium vli39/k8s-bigip-ctlr:vtep
it complains error
E0620 17:10:50.879379       1 reflector.go:138] github.com/F5Networks/k8s-bigip-ctlr/pkg/appmanager/appManager.go:718: Failed to watch *v1beta1.Ingress: failed to list *v1beta1.Ingress: ingresses.extensions is forbidden: User "system:serviceaccount:kube-system:bigip-ctlr-serviceaccount" cannot list resource "ingresses" in API group "extensions" at the cluster scope

it appears CIS 2.4.1 not supporting ingress for k8s 1.20

--- a/cilium-bigip/cis-cilium.yaml
+++ b/cilium-bigip/cis-cilium.yaml
@@ -42,11 +42,11 @@ spec:
         - --bigip-partition
         - k8s 
         - --bigip-url
-        - 10.169.72.34
+        - 10.169.72.15
         - --bigip-username
         - admin
         - --bigip-password
-        - admin
+        - testenv12 
         - --verify-interval
         - "30"
         - --node-poll-interval
@@ -65,7 +65,7 @@ spec:
         - "true"
         command:
         - /app/bin/k8s-bigip-ctlr
-        image: vli39/k8s-bigip-ctlr:cilium
+        image: vli39/k8s-bigip-ctlr:vtep
         imagePullPolicy: Always 
         #imagePullPolicy: Never 
         name: cc-cluster
