--- a/cilium-k3s-bigip/cilium-bigip.yaml
+++ b/cilium-k3s-bigip/cilium-bigip.yaml
@@ -732,7 +732,7 @@ spec:
               name: cilium-config
               optional: true
         - name: KUBERNETES_SERVICE_HOST
-          value: "10.169.72.127"
+          value: "K3S-HOST"
         - name: KUBERNETES_SERVICE_PORT
           value: "6443"
           #image: "quay.io/cilium/operator-generic:v1.10.0-rc2"
